# fenrir-old

./: .gitignore  .gitmodules  CMakeLists.txt  fenrir.make  imgui.ini  premake5.lua
.github/workflows/: cmake.yml
fenrir/: premake5.lua
fenrir/src/: main.cpp
ghua/: premake5.lua
ghua/src/: ghua.cpp  ghua.h
ghua/src/ghua/: Application.cpp  Application.h  Core.h  Event.h  Log.h
ghua/src/ghua/core/: Application.cpp  Application.h  Core.h  Entrypoint.h  Event.h  Layer.cpp  Layer.h  Log.h
ghua/src/ghua/graphics/: Window.cpp  Window.h
models/: Box.gltf
shaders/: frag.spv  shader.frag  shader.vert  vert.spv
src/: main.cpp
src/core/: application.cpp  application.h  core.h  event.h  layer.h  log.h
src/graphics/: fengui.h  material.cpp  material.h  mesh.cpp  mesh.h  model.cpp  model.h  renderer.cpp  renderer.h  window.cpp  window.h  windowevents.h
src/graphics/vulkan/: buffer.h  command.cpp  command.h  context.cpp  context.h  descriptor.h  device.cpp  device.h  framebuffer.cpp  framebuffer.h  image.cpp  image.h  index.cpp  index.h  instance.cpp  instance.h  layout.cpp  layout.h  physical.cpp  physical.h  pipeline.cpp  pipeline.h  renderpass.cpp  renderpass.h  shader.cpp  shader.h  surface.cpp  surface.h  swapchain.cpp  swapchain.h  uniform.h  utils.cpp  utils.h  vertex.cpp  vertex.h  vma.cpp  vma.h
